# APIG

./: .gitignore  README.md  pyproject.toml  report.json  report_naive.json  report_test.json  requirements.txt
apig/: cli.py  harness.py
apig/agents/: base.py  llm_agent.py  naive_llm.py  registry.py  rule_based.py
apig/attacks/: compiler.py  io.py  schema.py
apig/env/: policy.py  tools.py  types.py
apig/llm/: __init__.py  cache.py
apig/llm/providers/: base.py  gemini_client.py  openai_client.py  registry.py
apig/scoring/: __init__.py  metrics.py
apig/suites/: base.py  inbox.py  rag_policy.py  registry.py  web_form.py
attacks/: example.yml
configs/: default.json
tests/: conftest.py  test_attacks.py  test_runner.py
